Remove Java11 Warnings