@@ -171,7 +171,7 @@ public class ValueDataUtil {
     if ( dataA == null || dataB == null ) {
       return null;
     }
-    return new Long( StringUtils.getLevenshteinDistance( dataA.toString(), dataB.toString() ) );
+    return Long.valueOf( StringUtils.getLevenshteinDistance( dataA.toString(), dataB.toString() ) );
   }
 
   /**
@@ -184,7 +184,7 @@ public class ValueDataUtil {
     if ( dataA == null || dataB == null ) {
       return null;
     }
-    return new Long( Utils.getDamerauLevenshteinDistance( dataA.toString(), dataB.toString() ) );
+    return Long.valueOf( Utils.getDamerauLevenshteinDistance( dataA.toString(), dataB.toString() ) );
   }
 
   /**
@@ -197,7 +197,7 @@ public class ValueDataUtil {
     if ( dataA == null || dataB == null ) {
       return null;
     }
-    return new Long( (int) new NeedlemanWunsch().score( dataA.toString(), dataB.toString() ) );
+    return Long.valueOf( (int) new NeedlemanWunsch().score( dataA.toString(), dataB.toString() ) );
   }
 
   /**
@@ -209,7 +209,7 @@ public class ValueDataUtil {
     if ( dataA == null || dataB == null ) {
       return null;
     }
-    return new Double( new Jaro().score( dataA.toString(), dataB.toString() ) );
+    return Double.valueOf( new Jaro().score( dataA.toString(), dataB.toString() ) );
   }
 
   /**
@@ -221,7 +221,7 @@ public class ValueDataUtil {
     if ( dataA == null || dataB == null ) {
       return null;
     }
-    return new Double( new JaroWinkler().score( dataA.toString(), dataB.toString() ) );
+    return Double.valueOf( new JaroWinkler().score( dataA.toString(), dataB.toString() ) );
   }
 
   public static String get_Metaphone( ValueMetaInterface metaA, Object dataA ) {
@@ -478,7 +478,7 @@ public class ValueDataUtil {
         } else if ( valueA == null ) {
           return valueB;
         } else {
-          return new Double( valueA.doubleValue() + valueB.doubleValue() );
+          return Double.valueOf( valueA.doubleValue() + valueB.doubleValue() );
         }
       }
       case ValueMetaInterface.TYPE_INTEGER: {
@@ -489,7 +489,7 @@ public class ValueDataUtil {
         } else if ( valueA == null ) {
           return valueB;
         } else {
-          return new Long( valueA.longValue() + valueB.longValue() );
+          return Long.valueOf( valueA.longValue() + valueB.longValue() );
         }
       }
       case ValueMetaInterface.TYPE_BOOLEAN: {
@@ -529,10 +529,10 @@ public class ValueDataUtil {
       case ValueMetaInterface.TYPE_STRING:
         return metaA.getString( dataA ) + metaB.getString( dataB ) + metaC.getString( dataC );
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( metaA.getNumber( dataA ).doubleValue()
+        return Double.valueOf( metaA.getNumber( dataA ).doubleValue()
           + metaB.getNumber( dataB ).doubleValue() + metaC.getNumber( dataC ).doubleValue() );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( metaA.getInteger( dataA ).longValue()
+        return Long.valueOf( metaA.getInteger( dataA ).longValue()
           + metaB.getInteger( dataB ).longValue() + metaC.getInteger( dataC ).longValue() );
       case ValueMetaInterface.TYPE_BOOLEAN:
         return Boolean.valueOf( metaA.getBoolean( dataA ).booleanValue()
@@ -598,13 +598,13 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( metaA.getNumber( dataA ).doubleValue() - metaB.getNumber( dataB ).doubleValue() );
+        return Double.valueOf( metaA.getNumber( dataA ).doubleValue() - metaB.getNumber( dataB ).doubleValue() );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( metaA.getInteger( dataA ).longValue() - metaB.getInteger( dataB ).longValue() );
+        return Long.valueOf( metaA.getInteger( dataA ).longValue() - metaB.getInteger( dataB ).longValue() );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return metaA.getBigNumber( dataA ).subtract( metaB.getBigNumber( dataB ) );
       default:
-        return new Long( metaA.getInteger( dataA ).longValue() - metaB.getInteger( dataB ).longValue() );
+        return Long.valueOf( metaA.getInteger( dataA ).longValue() - metaB.getInteger( dataB ).longValue() );
     }
   }
 
@@ -637,11 +637,11 @@ public class ValueDataUtil {
   }
 
   public static Double multiplyDoubles( Double a, Double b ) {
-    return new Double( a.doubleValue() * b.doubleValue() );
+    return Double.valueOf( a.doubleValue() * b.doubleValue() );
   }
 
   public static Long multiplyLongs( Long a, Long b ) {
-    return new Long( a.longValue() * b.longValue() );
+    return Long.valueOf( a.longValue() * b.longValue() );
   }
 
   public static BigDecimal multiplyBigDecimals( BigDecimal a, BigDecimal b, MathContext mc ) {
@@ -696,11 +696,11 @@ public class ValueDataUtil {
   }
 
   public static Double divideDoubles( Double a, Double b ) {
-    return new Double( a.doubleValue() / b.doubleValue() );
+    return Double.valueOf( a.doubleValue() / b.doubleValue() );
   }
 
   public static Long divideLongs( Long a, Long b ) {
-    return new Long( a.longValue() / b.longValue() );
+    return Long.valueOf( a.longValue() / b.longValue() );
   }
 
   public static BigDecimal divideBigDecimals( BigDecimal a, BigDecimal b, MathContext mc ) {
@@ -717,9 +717,9 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.sqrt( metaA.getNumber( dataA ).doubleValue() ) );
+        return Double.valueOf( Math.sqrt( metaA.getNumber( dataA ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( Math.round( Math.sqrt( metaA.getNumber( dataA ).doubleValue() ) ) );
+        return Long.valueOf( Math.round( Math.sqrt( metaA.getNumber( dataA ).doubleValue() ) ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return BigDecimal.valueOf( Math.sqrt( metaA.getNumber( dataA ).doubleValue() ) );
 
@@ -775,10 +775,10 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( metaA.getNumber( dataA ).doubleValue()
+        return Double.valueOf( metaA.getNumber( dataA ).doubleValue()
           - divideDoubles( multiplyDoubles( metaA.getNumber( dataA ), metaB.getNumber( dataB ) ), 100.0D ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( metaA.getInteger( dataA ).longValue()
+        return Long.valueOf( metaA.getInteger( dataA ).longValue()
           - divideLongs( multiplyLongs( metaA.getInteger( dataA ), metaB.getInteger( dataB ) ), 100L ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return metaA.getBigNumber( dataA ).subtract(
@@ -806,10 +806,10 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( metaA.getNumber( dataA ).doubleValue()
+        return Double.valueOf( metaA.getNumber( dataA ).doubleValue()
           + divideDoubles( multiplyDoubles( metaA.getNumber( dataA ), metaB.getNumber( dataB ) ), 100.0D ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( metaA.getInteger( dataA ).longValue()
+        return Long.valueOf( metaA.getInteger( dataA ).longValue()
           + divideLongs( multiplyLongs( metaA.getInteger( dataA ), metaB.getInteger( dataB ) ), 100L ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return metaA.getBigNumber( dataA ).add(
@@ -838,10 +838,10 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( metaA.getNumber( dataA ).doubleValue()
+        return Double.valueOf( metaA.getNumber( dataA ).doubleValue()
           + ( metaB.getNumber( dataB ).doubleValue() * metaC.getNumber( dataC ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( metaA.getInteger( dataA ).longValue()
+        return Long.valueOf( metaA.getInteger( dataA ).longValue()
           + ( metaB.getInteger( dataB ).longValue() * metaC.getInteger( dataC ).longValue() ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return metaA.getBigNumber( dataA ).add(
@@ -869,12 +869,12 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.sqrt( metaA.getNumber( dataA ).doubleValue()
+        return Double.valueOf( Math.sqrt( metaA.getNumber( dataA ).doubleValue()
           * metaA.getNumber( dataA ).doubleValue() + metaB.getNumber( dataB ).doubleValue()
           * metaB.getNumber( dataB ).doubleValue() ) );
 
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( Math.round( Math.sqrt( metaA.getInteger( dataA ).longValue()
+        return Long.valueOf( Math.round( Math.sqrt( metaA.getInteger( dataA ).longValue()
           * metaA.getInteger( dataA ).longValue() + metaB.getInteger( dataB ).longValue()
           / metaB.getInteger( dataB ).longValue() ) ) );
 
@@ -905,7 +905,7 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.round( metaA.getNumber( dataA ).doubleValue() ) );
+        return Double.valueOf( Math.round( metaA.getNumber( dataA ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
         return metaA.getInteger( dataA );
       case ValueMetaInterface.TYPE_BIGNUMBER:
@@ -936,9 +936,9 @@ public class ValueDataUtil {
     switch ( metaA.getType() ) {
     // Use overloaded Const.round(value, precision, mode)
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Const.round( metaA.getNumber( dataA ), 0, roundingMode ) );
+        return Double.valueOf( Const.round( metaA.getNumber( dataA ), 0, roundingMode ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( Const.round( metaA.getInteger( dataA ), 0, roundingMode ) );
+        return Long.valueOf( Const.round( metaA.getInteger( dataA ), 0, roundingMode ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return Const.round( metaA.getBigNumber( dataA ), 0, roundingMode );
       default:
@@ -990,10 +990,10 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Const.round( metaA.getNumber( dataA ).doubleValue(), metaB.getInteger( dataB ).intValue(),
+        return Double.valueOf( Const.round( metaA.getNumber( dataA ).doubleValue(), metaB.getInteger( dataB ).intValue(),
             roundingMode ) );
       case ValueMetaInterface.TYPE_INTEGER:
-        return new Long( Const.round( metaA.getInteger( dataA ).longValue(), metaB.getInteger( dataB ).intValue(),
+        return Long.valueOf( Const.round( metaA.getInteger( dataA ).longValue(), metaB.getInteger( dataB ).intValue(),
             roundingMode ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
         return Const.round( metaA.getBigNumber( dataA ), metaB.getInteger( dataB ).intValue(), roundingMode );
@@ -1039,7 +1039,7 @@ public class ValueDataUtil {
     }
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.ceil( metaA.getNumber( dataA ).doubleValue() ) );
+        return Double.valueOf( Math.ceil( metaA.getNumber( dataA ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
         return metaA.getInteger( dataA );
       case ValueMetaInterface.TYPE_BIGNUMBER:
@@ -1056,7 +1056,7 @@ public class ValueDataUtil {
     }
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.floor( metaA.getNumber( dataA ).doubleValue() ) );
+        return Double.valueOf( Math.floor( metaA.getNumber( dataA ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
         return metaA.getInteger( dataA );
       case ValueMetaInterface.TYPE_BIGNUMBER:
@@ -1074,7 +1074,7 @@ public class ValueDataUtil {
 
     switch ( metaA.getType() ) {
       case ValueMetaInterface.TYPE_NUMBER:
-        return new Double( Math.abs( metaA.getNumber( dataA ).doubleValue() ) );
+        return Double.valueOf( Math.abs( metaA.getNumber( dataA ).doubleValue() ) );
       case ValueMetaInterface.TYPE_INTEGER:
         return metaA.getInteger( Math.abs( metaA.getNumber( dataA ).longValue() ) );
       case ValueMetaInterface.TYPE_BIGNUMBER:
@@ -1261,17 +1261,17 @@ public class ValueDataUtil {
       long diff = endL - startL;
 
       if ( Const.isEmpty( resultType ) ) {
-        return new Long( diff / 86400000 );
+        return Long.valueOf( diff / 86400000 );
       } else if ( resultType.equals( "ms" ) ) {
-        return new Long( diff );
+        return Long.valueOf( diff );
       } else if ( resultType.equals( "s" ) ) {
-        return new Long( diff / 1000 ); // second
+        return Long.valueOf( diff / 1000 ); // second
       } else if ( resultType.equals( "mn" ) ) {
-        return new Long( diff / 60000 ); // minute
+        return Long.valueOf( diff / 60000 ); // minute
       } else if ( resultType.equals( "h" ) ) {
-        return new Long( diff / 3600000 ); // hour
+        return Long.valueOf( diff / 3600000 ); // hour
       } else if ( resultType.equals( "d" ) ) {
-        return new Long( diff / 86400000 );
+        return Long.valueOf( diff / 86400000 );
       } else {
         throw new KettleValueException( "Unknown result type option '" + resultType + "'" );
       }
@@ -1305,7 +1305,7 @@ public class ValueDataUtil {
         }
         calFrom.add( Calendar.DATE, 1 );
       } while ( calFrom.getTimeInMillis() < calTo.getTimeInMillis() );
-      return new Long( singminus ? -iNoOfWorkingDays : iNoOfWorkingDays );
+      return Long.valueOf( singminus ? -iNoOfWorkingDays : iNoOfWorkingDays );
     } else {
       return null;
     }
@@ -1318,7 +1318,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.YEAR ) );
+    return Long.valueOf( calendar.get( Calendar.YEAR ) );
 
   }
 
@@ -1329,7 +1329,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.MONTH ) + 1 );
+    return Long.valueOf( calendar.get( Calendar.MONTH ) + 1 );
 
   }
 
@@ -1340,7 +1340,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( ( calendar.get( Calendar.MONTH ) + 3 ) / 3 );
+    return Long.valueOf( ( calendar.get( Calendar.MONTH ) + 3 ) / 3 );
   }
 
   public static Object dayOfYear( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1350,7 +1350,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.DAY_OF_YEAR ) );
+    return Long.valueOf( calendar.get( Calendar.DAY_OF_YEAR ) );
   }
 
   public static Object dayOfMonth( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1360,7 +1360,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.DAY_OF_MONTH ) );
+    return Long.valueOf( calendar.get( Calendar.DAY_OF_MONTH ) );
   }
 
   public static Object hourOfDay( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1370,7 +1370,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.HOUR_OF_DAY ) );
+    return Long.valueOf( calendar.get( Calendar.HOUR_OF_DAY ) );
   }
 
   public static Object minuteOfHour( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1380,7 +1380,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.MINUTE ) );
+    return Long.valueOf( calendar.get( Calendar.MINUTE ) );
   }
 
   public static Object secondOfMinute( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1390,7 +1390,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.SECOND ) );
+    return Long.valueOf( calendar.get( Calendar.SECOND ) );
   }
 
   public static Object dayOfWeek( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1400,7 +1400,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.DAY_OF_WEEK ) );
+    return Long.valueOf( calendar.get( Calendar.DAY_OF_WEEK ) );
   }
 
   public static Object weekOfYear( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1410,7 +1410,7 @@ public class ValueDataUtil {
 
     Calendar calendar = Calendar.getInstance();
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.WEEK_OF_YEAR ) );
+    return Long.valueOf( calendar.get( Calendar.WEEK_OF_YEAR ) );
   }
 
   public static Object weekOfYearISO8601( ValueMetaInterface metaA, Object dataA ) throws KettleValueException {
@@ -1422,7 +1422,7 @@ public class ValueDataUtil {
     calendar.setMinimalDaysInFirstWeek( 4 );
     calendar.setFirstDayOfWeek( Calendar.MONDAY );
     calendar.setTime( metaA.getDate( dataA ) );
-    return new Long( calendar.get( Calendar.WEEK_OF_YEAR ) );
+    return Long.valueOf( calendar.get( Calendar.WEEK_OF_YEAR ) );
 
   }
 
@@ -1448,7 +1448,7 @@ public class ValueDataUtil {
       year++;
     }
 
-    return new Long( year );
+    return Long.valueOf( year );
   }
 
   /**
@@ -1860,10 +1860,10 @@ public class ValueDataUtil {
 
     switch ( type.getType() ) {
       case ( ValueMetaInterface.TYPE_INTEGER ) : {
-        return new Long( 0 );
+        return Long.valueOf( 0 );
       }
       case ( ValueMetaInterface.TYPE_NUMBER ) : {
-        return new Double( 0 );
+        return Double.valueOf( 0 );
       }
       case ( ValueMetaInterface.TYPE_BIGNUMBER ) : {
         return new BigDecimal( 0 );
