@@ -465,28 +465,28 @@ public class ValueMetaBaseTest {
   @Test
   public void testCompareIntegers() throws KettleValueException {
     ValueMetaBase intMeta = new ValueMetaBase( "int", TYPE_INTEGER );
-    Long int1 = new Long( 6223372036854775804L );
-    Long int2 = new Long( -6223372036854775804L );
+    Long int1 = Long.valueOf( 6223372036854775804L );
+    Long int2 = Long.valueOf( -6223372036854775804L );
     assertEquals( 1, intMeta.compare( int1, int2 ) );
     assertEquals( -1, intMeta.compare( int2, int1 ) );
     assertEquals( 0, intMeta.compare( int1, int1 ) );
     assertEquals( 0, intMeta.compare( int2, int2 ) );
 
-    int1 = new Long( 9223372036854775804L );
-    int2 = new Long( -9223372036854775804L );
+    int1 = Long.valueOf( 9223372036854775804L );
+    int2 = Long.valueOf( -9223372036854775804L );
     assertEquals( 1, intMeta.compare( int1, int2 ) );
     assertEquals( -1, intMeta.compare( int2, int1 ) );
     assertEquals( 0, intMeta.compare( int1, int1 ) );
     assertEquals( 0, intMeta.compare( int2, int2 ) );
 
-    int1 = new Long( 6223372036854775804L );
-    int2 = new Long( -9223372036854775804L );
+    int1 = Long.valueOf( 6223372036854775804L );
+    int2 = Long.valueOf( -9223372036854775804L );
     assertEquals( 1, intMeta.compare( int1, int2 ) );
     assertEquals( -1, intMeta.compare( int2, int1 ) );
     assertEquals( 0, intMeta.compare( int1, int1 ) );
 
-    int1 = new Long( 9223372036854775804L );
-    int2 = new Long( -6223372036854775804L );
+    int1 = Long.valueOf( 9223372036854775804L );
+    int2 = Long.valueOf( -6223372036854775804L );
     assertEquals( 1, intMeta.compare( int1, int2 ) );
     assertEquals( -1, intMeta.compare( int2, int1 ) );
     assertEquals( 0, intMeta.compare( int1, int1 ) );
