@@ -647,7 +647,7 @@ public class TextFileInput extends BaseStep implements StepInterface {
 
     Long errorCount = null;
     if ( info.isErrorIgnored() && info.getErrorCountField() != null && info.getErrorCountField().length() > 0 ) {
-      errorCount = new Long( 0L );
+      errorCount = Long.valueOf( 0L );
     }
     String errorFields = null;
     if ( info.isErrorIgnored() && info.getErrorFieldsField() != null && info.getErrorFieldsField().length() > 0 ) {
@@ -694,7 +694,7 @@ public class TextFileInput extends BaseStep implements StepInterface {
               value = null;
 
               if ( errorCount != null ) {
-                errorCount = new Long( errorCount.longValue() + 1L );
+                errorCount = Long.valueOf( errorCount.longValue() + 1L );
               }
               if ( errorFields != null ) {
                 StringBuilder sb = new StringBuilder( errorFields );
@@ -767,7 +767,7 @@ public class TextFileInput extends BaseStep implements StepInterface {
 
         // Possibly add a row number...
         if ( info.includeRowNumber() ) {
-          r[index] = new Long( rowNr );
+          r[index] = Long.valueOf( rowNr );
           index++;
         }
 
@@ -788,7 +788,7 @@ public class TextFileInput extends BaseStep implements StepInterface {
         }
         // Add Size
         if ( addSize ) {
-          r[index] = new Long( size );
+          r[index] = Long.valueOf( size );
           index++;
         }
         // add Hidden
@@ -1374,7 +1374,7 @@ public class TextFileInput extends BaseStep implements StepInterface {
         data.rootUriName = data.file.getName().getRootURI();
       }
       if ( data.addSize ) {
-        data.size = new Long( data.file.getContent().getSize() );
+        data.size = Long.valueOf( data.file.getContent().getSize() );
       }
       data.lineInFile = 0;
       if ( meta.isPassingThruFields() ) {
