@@ -77,7 +77,7 @@ public class DenormaliserAggregationsTest {
   @Test
   public void testDenormalizeSum100PlusNull() throws KettleValueException {
     // prevTargetData
-    Long sto = new Long( 100 );
+    Long sto = Long.valueOf( 100 );
     data.targetResult = new Object[] { sto };
 
     step.deNormalise( testSumPreconditions( "SUM" ), new Object[] { JUNIT, null } );
@@ -88,7 +88,7 @@ public class DenormaliserAggregationsTest {
   @Test
   public void testDenormalizeSumNullPlus100() throws KettleValueException {
     // prevTargetData
-    Long sto = new Long( 100 );
+    Long sto = Long.valueOf( 100 );
     data.targetResult = new Object[] { null };
 
     step.deNormalise( testSumPreconditions( "SUM" ), new Object[] { JUNIT, sto } );
@@ -105,7 +105,7 @@ public class DenormaliserAggregationsTest {
   public void testDenormalizeMinValueY() throws KettleValueException {
     step.setMinNullIsValued( true );
 
-    Long trinadzat = new Long( -13 );
+    Long trinadzat = Long.valueOf( -13 );
     data.targetResult = new Object[] { trinadzat };
 
     step.deNormalise( testSumPreconditions( "MIN" ), new Object[] { JUNIT, null } );
@@ -122,7 +122,7 @@ public class DenormaliserAggregationsTest {
   public void testDenormalizeMinValueN() throws KettleValueException {
     step.setVariable( Const.KETTLE_AGGREGATION_MIN_NULL_IS_VALUED, "N" );
 
-    Long sto = new Long( 100 );
+    Long sto = Long.valueOf( 100 );
     data.targetResult = new Object[] { sto };
 
     step.deNormalise( testSumPreconditions( "MIN" ), new Object[] { JUNIT, null } );
@@ -183,7 +183,7 @@ public class DenormaliserAggregationsTest {
     data.removeNrs = new int[]{ 0 };
     Object[] outputRowData = step.buildResult( rmi, rowData );
 
-    Assert.assertEquals( "Output row: nulls are zeros", new Long( 0 ), outputRowData[2] );
+    Assert.assertEquals( "Output row: nulls are zeros", Long.valueOf( 0 ), outputRowData[2] );
   }
 
   @Test
