@@ -389,7 +389,7 @@ public class JsonInput extends BaseFileInputStep<JsonInputMeta, JsonInputData> i
     }
     // See if we need to add the row number to the row...
     if ( meta.includeRowNumber() && !Const.isEmpty( meta.getRowNumberField() ) ) {
-      outputRowData[rowIndex++] = new Long( data.rownr );
+      outputRowData[rowIndex++] = Long.valueOf( data.rownr );
     }
     // Possibly add short filename...
     if ( meta.getShortFileNameField() != null && meta.getShortFileNameField().length() > 0 ) {
@@ -405,11 +405,11 @@ public class JsonInput extends BaseFileInputStep<JsonInputMeta, JsonInputData> i
     }
     // Add Size
     if ( meta.getSizeField() != null && meta.getSizeField().length() > 0 ) {
-      outputRowData[rowIndex++] = new Long( data.size );
+      outputRowData[rowIndex++] = Long.valueOf( data.size );
     }
     // add Hidden
     if ( meta.isHiddenField() != null && meta.isHiddenField().length() > 0 ) {
-      outputRowData[rowIndex++] = new Boolean( data.path );
+      outputRowData[rowIndex++] = Boolean.valueOf( data.path );
     }
     // Add modification date
     if ( meta.getLastModificationDateField() != null && meta.getLastModificationDateField().length() > 0 ) {
