@@ -154,13 +154,13 @@ public class XMLInputStream extends BaseStep implements StepInterface {
       r[data.pos_xml_filename] = new String( data.filename );
     }
     if ( data.pos_xml_row_number != -1 ) {
-      r[data.pos_xml_row_number] = new Long( data.rowNumber );
+      r[data.pos_xml_row_number] = Long.valueOf( data.rowNumber );
     }
     if ( data.pos_xml_element_id != -1 ) {
       r[data.pos_xml_element_id] = data.elementLevelID[data.elementLevel];
     }
     if ( data.pos_xml_element_level != -1 ) {
-      r[data.pos_xml_element_level] = new Long( data.elementLevel );
+      r[data.pos_xml_element_level] = Long.valueOf( data.elementLevel );
     }
     if ( data.pos_xml_parent_element_id != -1 ) {
       r[data.pos_xml_parent_element_id] = data.elementParentID[data.elementLevel];
@@ -212,7 +212,7 @@ public class XMLInputStream extends BaseStep implements StepInterface {
 
     int eventType = e.getEventType();
     if ( data.pos_xml_data_type_numeric != -1 ) {
-      outputRowData[data.pos_xml_data_type_numeric] = new Long( eventType );
+      outputRowData[data.pos_xml_data_type_numeric] = Long.valueOf( eventType );
     }
     if ( data.pos_xml_data_type_description != -1 ) {
       if ( eventType == 0 || eventType > eventDescription.length ) {
@@ -223,10 +223,10 @@ public class XMLInputStream extends BaseStep implements StepInterface {
       }
     }
     if ( data.pos_xml_location_line != -1 ) {
-      outputRowData[data.pos_xml_location_line] = new Long( e.getLocation().getLineNumber() );
+      outputRowData[data.pos_xml_location_line] = Long.valueOf( e.getLocation().getLineNumber() );
     }
     if ( data.pos_xml_location_column != -1 ) {
-      outputRowData[data.pos_xml_location_column] = new Long( e.getLocation().getColumnNumber() );
+      outputRowData[data.pos_xml_location_column] = Long.valueOf( e.getLocation().getColumnNumber() );
     }
 
     switch ( eventType ) {
@@ -379,7 +379,7 @@ public class XMLInputStream extends BaseStep implements StepInterface {
       putRowOut( outputRowDataNamespace ); // first put the element name info out
       // change data_type to ATTRIBUTE
       if ( data.pos_xml_data_type_numeric != -1 ) {
-        outputRowData[data.pos_xml_data_type_numeric] = new Long( XMLStreamConstants.NAMESPACE );
+        outputRowData[data.pos_xml_data_type_numeric] = Long.valueOf( XMLStreamConstants.NAMESPACE );
       }
       if ( data.pos_xml_data_type_description != -1 ) {
         outputRowData[data.pos_xml_data_type_description] = eventDescription[XMLStreamConstants.NAMESPACE];
@@ -412,7 +412,7 @@ public class XMLInputStream extends BaseStep implements StepInterface {
       putRowOut( outputRowDataAttribute ); // first put the element name (or namespace) info out
       // change data_type to ATTRIBUTE
       if ( data.pos_xml_data_type_numeric != -1 ) {
-        outputRowData[data.pos_xml_data_type_numeric] = new Long( XMLStreamConstants.ATTRIBUTE );
+        outputRowData[data.pos_xml_data_type_numeric] = Long.valueOf( XMLStreamConstants.ATTRIBUTE );
       }
       if ( data.pos_xml_data_type_description != -1 ) {
         outputRowData[data.pos_xml_data_type_description] = eventDescription[XMLStreamConstants.ATTRIBUTE];
@@ -471,9 +471,9 @@ public class XMLInputStream extends BaseStep implements StepInterface {
   }
 
   private void resetElementCounters() {
-    data.rowNumber = new Long( 0 );
+    data.rowNumber = Long.valueOf( 0 );
     data.elementLevel = 0;
-    data.elementID = new Long( 0 ); // init value, could be parameterized later on
+    data.elementID = Long.valueOf( 0 ); // init value, could be parameterized later on
     data.elementLevelID = new Long[PARENT_ID_ALLOCATE_SIZE];
     data.elementLevelID[0] = data.elementID; // inital id for level 0
     data.elementParentID = new Long[PARENT_ID_ALLOCATE_SIZE];
