@@ -281,7 +281,7 @@ public class SOQLValuesHighlight implements LineStyleListener {
      */
     void initialize() {
       fgKeys = new Hashtable<String, Integer>();
-      Integer k = new Integer( KEY );
+      Integer k = Integer.valueOf( KEY );
       for ( int i = 0; i < fgKeywords.length; i++ ) {
         fgKeys.put( fgKeywords[i], k );
       }
@@ -293,7 +293,7 @@ public class SOQLValuesHighlight implements LineStyleListener {
 
     void initializeMDXFunctions() {
       kfKeys = new Hashtable<String, Integer>();
-      Integer k = new Integer( FUNCTIONS );
+      Integer k = Integer.valueOf( FUNCTIONS );
       for ( int i = 0; i < kfKeywords.length; i++ ) {
         kfKeys.put( kfKeywords[i], k );
       }
