@@ -103,9 +103,9 @@ public class CsvInput1Test extends CsvInputBase {
 
     RowMetaInterface rm = createResultRowMetaInterface();
 
-    Object[] r1 = new Object[] { new Long( 1L ), "b0", "c0", null, null, "fileName" };
-    Object[] r2 = new Object[] { new Long( 2L ), "b1", "c1", "d1", "e1", "fileName" };
-    Object[] r3 = new Object[] { new Long( 3L ), "b2", "c2", null, null, "fileName" };
+    Object[] r1 = new Object[] { Long.valueOf( 1L ), "b0", "c0", null, null, "fileName" };
+    Object[] r2 = new Object[] { Long.valueOf( 2L ), "b1", "c1", "d1", "e1", "fileName" };
+    Object[] r3 = new Object[] { Long.valueOf( 3L ), "b2", "c2", null, null, "fileName" };
 
     list.add( new RowMetaAndData( rm, r1 ) );
     list.add( new RowMetaAndData( rm, r2 ) );
